--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,7 @@
     "outDir": "types",
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
-    "lib": [
-      "DOM",
-      "ES6",
-      "DOM.Iterable",
-      "ScriptHost",
-      "ESNext"
-    ]
+    "lib": ["DOM", "ES6", "DOM.Iterable", "ScriptHost", "ESNext"]
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
