--- a/package.json
+++ b/package.json
@@ -19,29 +19,32 @@
     "build": "cross-env NODE_ENV=production run-s ci clean build:js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.4",
+    "@babel/runtime": "^7.23.9",
     "@violentmonkey/dom": "^2.1.5",
     "@violentmonkey/ui": "^0.7.8",
     "consola": "^3.2.3",
-    "solid-js": "^1.8.6"
+    "solid-js": "^1.8.12"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@gera2ld/plaid": "~2.6.0",
-    "@gera2ld/plaid-rollup": "~2.6.0",
-    "@unocss/postcss": "^0.57.7",
+    "@gera2ld/plaid": "~2.7.0",
+    "@gera2ld/plaid-rollup": "~2.7.0",
+    "@unocss/postcss": "^0.58.4",
     "@violentmonkey/types": "^0.1.7",
-    "babel-preset-solid": "^1.8.6",
+    "babel-preset-solid": "^1.8.12",
+    "cross-env": "^7.0.3",
     "del-cli": "^5.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
-    "prettier": "3.1.0",
-    "rollup-plugin-userscript": "^0.2.1",
-    "unocss": "^0.57.7"
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.0",
+    "prettier": "3.2.4",
+    "rollup-plugin-userscript": "^0.3.0",
+    "unocss": "^0.58.4"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --fix"
+    "src/**": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
